<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactFragment"
    android:background="@drawable/background_image">

    <Button
        android:id="@+id/contact_back_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"/>


    <!-- Creating linearlayout to align item in vertical order -->
    <LinearLayout
        android:id="@+id/llForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1aaa"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heading1"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="#000000"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:text="@string/heading2"
            android:textColor="#000000"/>


        <EditText
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:text="@string/username"
            android:layout_margin="25dp"
            android:background="@drawable/custom_contact_textview"/>


        <EditText
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:text="@string/email"
            android:layout_margin="10dp"
            android:background="@drawable/custom_contact_textview" />


        <EditText
            android:layout_width="240dp"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:text="@string/address"
            android:layout_margin="25dp"
            android:background="@drawable/custom_contact_textview"/>


        <EditText
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:background="@drawable/custom_describe_textview"
            android:layout_marginTop="15dp"
            android:gravity="top"
            android:padding="10dp"
            android:text="@string/anything_want_to_ask"
            android:textSize="18sp"/>


        <Button
            android:id="@+id/contact_send_btn"
            android:layout_width="150dp"
            android:layout_height="54dp"
            android:layout_margin="20dp"
            android:background="@drawable/custom_send_button"
            android:text="@string/send"
            android:textColor="@color/white" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>





