<?xml version="1.0" encoding="utf-8"?>

<!--first linearLayout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profileFragment"
    android:orientation="vertical"
    android:background="@drawable/background_image">


        <!--personal_information-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="50dp"
            android:text="@string/h1_txt"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>


    <!--enter your...-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/txt_h2"
        android:textColor="@android:color/black"
        android:textSize="19sp" />

    <!--second linearlayout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <!--ellipse_image-->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/displayImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:shapeAppearance="@style/roundedImage"
            android:src="@drawable/imageface"
            android:scaleType="centerCrop"
            android:layout_marginStart="20dp"/>

        <!--capture your own image txt-->
        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/capture_your_own_image_here"
            android:textColor="@android:color/black"
            android:textSize="19sp"/>

        <!--camera-button-->
        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/camera"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"/>

    </LinearLayout>


    <!--Third LinearLayout-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_profile_textview"
        android:layout_marginStart="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full Name"
            android:textSize="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rinchen Yonjan"
            android:textSize="19sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/black"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>


        <TextView
            android:id="@+id/dateofbirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16 July 2001"
            android:textSize="19sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textSize="19sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Activity"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bachelor"
            android:textSize="19sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>




</LinearLayout>