<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".skillFragment">


    <!--Soft Skill-->
    <TextView
        android:id="@+id/soft.txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/soft_skill"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"/>

    <!--first scroll-->
    <HorizontalScrollView
        android:id="@+id/first.scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/soft.txt"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:rowCount="1"
            android:columnCount="4">

            <!--first column-->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/communication"
                    android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Communication"
                    android:textStyle="bold"
                    android:textColor="#000000"/>


            </LinearLayout>

            <!--second column-->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/criticalthinking"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Critical Thinking"
                    android:textStyle="bold"
                    android:textColor="#000000"/>


            </LinearLayout>

            <!--third column-->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/leadership"
                    android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Leadership"
                    android:textStyle="bold"
                    android:textColor="#000000"/>


            </LinearLayout>

            <!-- fourth column -->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/problemsolving"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Problem Solving"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

        </GridLayout>
    </HorizontalScrollView>


    <!--Programming Skill-->
    <TextView
        android:id="@+id/programming.txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programming_skill"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/first.scroll"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"/>

    <!--second scroll-->
    <HorizontalScrollView
        android:id="@+id/second.scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/programming.txt"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:rowCount="1"
            android:columnCount="4">

            <!--first column-->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical"
                android:gravity="center">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/java"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Java"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <!--second column-->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/python"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Python"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <!--third column-->
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/webdesign"
                    android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Web Design"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <!-- fourth column -->
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/cplusprogramming"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="C++"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

        </GridLayout>
    </HorizontalScrollView>


    <!--Other Skill-->
    <TextView
        android:id="@+id/other.txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_skill"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/second.scroll"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"/>

    <!--third scroll-->
    <HorizontalScrollView
        android:id="@+id/third.scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/other.txt"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:scrollbars="none">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:rowCount="1"
            android:columnCount="4">

            <!--first column-->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/editing"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Video Editing"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <!--second column-->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/cooking"
                    android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cooking"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <!--third column-->
            <LinearLayout
                android:layout_height="170dp"
                android:layout_width="170dp"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/driving"
                    android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Driving"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>

            <!-- fourth column -->
            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/iposhare"
                        android:scaleType="centerCrop"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Share Marketing"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

            </LinearLayout>


        </GridLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>